[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Enemigo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Disparo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Jugador.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.692373, -2.5436, 0, 0, 0, 0, 1021.43, -2.5436, 0, 0, 0, 0, 1018.91, 594.115, 0, 0, 0, 0, -3.20992, 589.08, 0, 0, 0, 0, -0.692373, -2.5436 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Enemigo = ExtResource( 2 )
Disparo = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 352.791, 394.745 )
scale = Vector2( 0.988106, 0.982957 )

[node name="Jugador" parent="." instance=ExtResource( 4 )]
position = Vector2( 373.921, 376.995 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 364.482, 371.985 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -0.692373, -2.5436 )

[node name="TimerEnemigo" type="Timer" parent="."]

[node name="Inicio" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="disparo" from="Jugador" to="." method="_on_Jugador_disparo"]
[connection signal="hit" from="Jugador" to="." method="game_over"]
[connection signal="localizacion" from="Jugador" to="." method="_on_Jugador_localizacion"]
[connection signal="timeout" from="TimerEnemigo" to="." method="_on_TimerEnemigo_timeout"]
[connection signal="timeout" from="Inicio" to="." method="_on_Inicio_timeout"]
